navbars and main content layouts
changed navbar carousel for blog, profile, favourites, and corporate.

added the content to the home page.

added a card layout to the tickets AND favourites page.

changed the corporate down thing on the side bar

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         </button>
       </div>
       <div class="d-flex justfify-content-center">
-        <a class="navbar-brand outfit-semibold brandname-nav-margin" href="index.html">outncenter</a>
+        <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style" href="index.html">outncenter</a>
       </div>
       <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
@@ -48,26 +48,23 @@
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
         aria-labelledby="offcanvasScrollNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h5>
+          <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
           <button type="button" class="btn-close close-button" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
             <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-            <li class="nav-item"><a class="nav-link" href="getrailed.html">getrailed</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                 corporate
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="corporate.html">Action</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="corporate.html">Something else here</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Content</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Management</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Production</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
               </ul>
             </li>
           </ul>
@@ -78,11 +75,11 @@
   <!--end down-scrollnavbar-->
 
   <!-- Carousel and its navigation-->
-  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
     <nav class="navbar" id="transNavbar">
       <div class="container-fluid">
         <div class="justify-content-start">
-          <button class="icon-style">
+          <button class="icon-style icon-white">
             <a href="profile.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -92,7 +89,7 @@
               </svg>
             </a>
           </button>
-          <button class="icon-style">
+          <button class="icon-style icon-white">
             <a href="favourites.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
                 viewBox="0 0 16 16">
@@ -103,16 +100,16 @@
           </button>
         </div>
         <div class="d-flex justfify-content-center">
-          <a class="navbar-brand outfit-semibold brandname-nav-margin" href="index.html">outncenter</a>
+          <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style icon-white" href="index.html">outncenter</a>
         </div>
         <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
           aria-labelledby="offcanvasScrollNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h5>
+            <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
           </div>
           <div class="offcanvas-body">
@@ -126,12 +123,10 @@
                   corporate
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="corporate.html">Action</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Another action</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="corporate.html">Something else here</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Content</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Management</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Production</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
                 </ul>
               </li>
             </ul>
@@ -149,59 +144,54 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100 images-about-page-carousel-first"
-          alt="eclipse hearts show">
+        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts show">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100 images-about-page-carousel-second"
-          alt="romeo and romeo show">
+        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
       </div>
       <div class="carousel-item">
-        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100 images-about-page-carousel-third"
-          alt="moonlight call show">
+        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
       </div>
     </div>
   </div>
-  <!--End of navigations-->
+<!--end of navigations-->
 
   <!--Main for your content and text starts here-->
   <main class="flex-grow-1">
    <!--Container for about-->
     <div class="container">
      <div class="row">
-      <div class="container container-about-page">
-        <div class="row">
-          <div class="col-12 col-md-6 col-xl-4">
-            <h2 class="about-font-size">About</h2>
-	      </div>
-	    </div>
-      </div> 
+      <h2 class="about-font-size">we're outncenter</h2>
+     </div>
     </div>
-   </div>
    <!--End of container for about-->
-	
+	<br>
+  <br>
+  <br>
 
     <!--Start of container for vision-->
     <div class="container">
       <div class="row d-flex align-items-center">
-        <div class="col-12 col-md-6 col-xl-4">
-          <h3 class="vision-about-page">Vision</h3>
+        <div class="col-12 col-md-6 col-xl-6">
+          <h3 class="vision-about-page">do you see the vision?</h3>
           <p>In the world of theatre where LGBTQ+ characters are    often misrepresented, we believe in shining spotlight
           on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
            </div>
-          <div class="col-12 col-md-6 col-xl-4 text-center">
+          <div class="col-12 col-md-6 col-xl-6 text-center">
          <img src="images/logo-out-n-center/logo-vertical-out-n-center.jpeg" alt="outncenter" class="img-fluid logo-about-page">
        </div>
       </div>
     </div>
+    <br>
+    <br>
 	<!--End of container for Logo-->
 
     <!-- Start of Mission & Values Section -->
     <div class="container">
         <div class="row">
     <!-- Mission Section -->
-          <div class="col-12 col-md-6 col-xl-6">
-            <h3 class="mission-about-page">Mission</h3>
+          <div class="col-12 col-md-6 col-xl-8">
+            <h3 class="mission-about-page">our mission</h3>
               <p>We provide a safe, inclusive space where users can:</p>
               <ul>
                <li>Read articles</li>
@@ -213,7 +203,7 @@
             </div>
     <!-- Values Section -->
           <div class="col-12 col-md-6 col-xl-4">
-            <h3 class="values-about-page">Values</h3>
+            <h3 class="values-about-page">our values</h3>
             <ul>
               <li>Authenticity</li>
               <li>Learning</li>
@@ -225,9 +215,12 @@
     <!-- End of Mission & Values Section -->
 
     <!--Start of container for Meet the team-->
- 
+     <br>
+     <br>
      <div class="container">
-       <h3 class="meet-the-team-about-page ">Meet the team</h3>
+       <h2 class="meet-the-team-about-page ">meet the team</h2>
+       <br>
+  <br>
 		 <div class="row"> 
     <!--Start of first container for Meet the team-->
            <div class="column-about-page-meet-the-team">
@@ -290,47 +283,47 @@
 
 
  <!--footer navigation starts here-->
-   <footer class="bg-blue text-white py-4">
-    <div class="container">
-        <div class="row">
-            <!-- Brand Logo & Name -->
-            <div class="col-md-4 text-center text-md-start">
-                <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
-                <h5 class="mt-2">outncenter</h5>
-            </div>
+ <footer class="bg-blue text-white py-4">
+  <div class="container">
+      <div class="row">
+          <!-- Brand Logo & Name -->
+          <div class="col-md-4 text-center text-md-start">
+              <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+              <h5 class="mt-2">outncenter</h5>
+          </div>
 
-            <!-- Contact Information -->
-            <div class="col-md-4 text-center footer2">
-                <h5>Contact</h5>
-                <p><a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
-                <p>Phone: +31 6 20 87 45 1</p>
-                <p>Address: 12 Grote Markt, Breda</p>
-            </div>
+          <!-- Contact Information -->
+          <div class="col-md-4 text-center footer2">
+              <h5>Contact</h5>
+              <p><a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
+              <p>Phone: +31 6 20 87 45 1</p>
+              <p>Address: 12 Grote Markt, Breda</p>
+          </div>
 
-            <!-- Explore (Navigation Links) -->
-            <div class="col-md-4 text-center text-md-end">
-                <h5>Explore</h5>
-                <ul class="list-unstyled footer2">
-                    <li><a href="index.html" style="text-decoration: none;  color: white;">Home Page</a></li>
-                    <li><a href="about.html" style="text-decoration: none;  color: white;">About</a></li>
-                    <li><a href="blog.html" style="text-decoration: none;  color: white;">Blog</a></li>
-                    <li><a href="profile.html" style="text-decoration: none;  color: white;">Profile</a></li>
-					<li><a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a></li>
-                </ul>
-            </div>
-        </div>
-		<div class="text-center mt-3">
-            <a href="https://www.tiktok.com/@outncenter._?_t=ZN-8vDfVe41V8o&_r=1" target="_blank" class="text-white me-3">
-                <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
-            </a>
-            <a href="https://www.instagram.com/outncenter._?igsh=bTAydDhpemxuNXJs" target="_blank" class="text-white">
-                <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
-            </a>
-        </div>
-        <hr class="my-3 border-light">
-        <p class="text-center footer2 mb-0">© 2025 outncenter. All Rights Reserved.</p>
-    </div>
-	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+          <!-- Explore (Navigation Links) -->
+          <div class="col-md-4 text-center text-md-end">
+              <h5>Explore</h5>
+              <ul class="list-unstyled footer2">
+                  <li><a href="index.html" style="text-decoration: none;  color: white;">Home Page</a></li>
+                  <li><a href="about.html" style="text-decoration: none;  color: white;">About</a></li>
+                  <li><a href="blog.html" style="text-decoration: none;  color: white;">Blog</a></li>
+                  <li><a href="profile.html" style="text-decoration: none;  color: white;">Profile</a></li>
+        <li><a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a></li>
+              </ul>
+          </div>
+      </div>
+  <div class="text-center mt-3">
+          <a href="https://www.tiktok.com/@outncenter._?_t=ZN-8vDfVe41V8o&_r=1" target="_blank" class="text-white me-3">
+              <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
+          </a>
+          <a href="https://www.instagram.com/outncenter._?igsh=bTAydDhpemxuNXJs" target="_blank" class="text-white">
+              <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
+          </a>
+      </div>
+      <hr class="my-3 border-light">
+      <p class="text-center footer2 mb-0">© 2025 outncenter. All Rights Reserved.</p>
+  </div>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </footer>
   <!--footer ends here-->
 
