--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
         </button>
       </div>
       <div class="d-flex justfify-content-center">
-        <a class="navbar-brand outfit-semibold brandname-nav-margin" href="index.html">outncenter</a>
+        <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style" href="index.html">outncenter</a>
       </div>
       <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
@@ -48,26 +48,23 @@
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
         aria-labelledby="offcanvasScrollNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h5>
+          <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
           <button type="button" class="btn-close close-button" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
             <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-            <li class="nav-item"><a class="nav-link" href="getrailed.html">getrailed</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                 corporate
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="corporate.html">Action</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="corporate.html">Something else here</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Content</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Management</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Production</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
               </ul>
             </li>
           </ul>
@@ -78,11 +75,11 @@
   <!--end down-scrollnavbar-->
 
   <!-- Carousel and its navigation-->
-  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
     <nav class="navbar" id="transNavbar">
       <div class="container-fluid">
         <div class="justify-content-start">
-          <button class="icon-style">
+          <button class="icon-style icon-white">
             <a href="profile.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -92,7 +89,7 @@
               </svg>
             </a>
           </button>
-          <button class="icon-style">
+          <button class="icon-style icon-white">
             <a href="favourites.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
                 viewBox="0 0 16 16">
@@ -103,16 +100,16 @@
           </button>
         </div>
         <div class="d-flex justfify-content-center">
-          <a class="navbar-brand outfit-semibold brandname-nav-margin" href="index.html">outncenter</a>
+          <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style icon-white" href="index.html">outncenter</a>
         </div>
         <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
           aria-labelledby="offcanvasScrollNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h5>
+            <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
           </div>
           <div class="offcanvas-body">
@@ -126,12 +123,10 @@
                   corporate
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="corporate.html">Action</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Another action</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="corporate.html">Something else here</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Content</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Management</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Production</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
                 </ul>
               </li>
             </ul>
@@ -140,22 +135,9 @@
       </div>
     </nav>
 
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2">
-      </button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
-      </div>
-      <div class="carousel-item">
-        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
+        <img src="images/blog4.jpg" class="d-block w-100" alt="play photo">
       </div>
     </div>
   </div>
@@ -168,15 +150,12 @@
     <!--container for about-->
 	  
     <div class="container">
-      	<div class="row">
-        	<div class="col-12 col-xl-8" style="padding-bottom: 7px;">
-          		<img src="images/blog4.jpg" class="img-fluid" alt="template">
-			</div>
-			<div class="col-12 col-xl-4">
-				<h5 class= "outfit-semibold">Must-See LGBTQ+ Shows Right Now</h5>
-				<p class= "outfit-medium">A roundup of the latest and best gay-themed productions.</p>
-        	</div>
-      	</div>
+      <div class="row">
+        <div class="col-12">
+          <h3 class="outfit-semibold">Must-See LGBTQ+ Shows Right Now</h3>
+          <p>A roundup of the latest and best gay-themed productions.</p>
+        </div>
+      </div>
 		
 		<!-- Empty row -->
 		
