--- a/favourites.html
+++ b/favourites.html
@@ -39,7 +39,7 @@
         </button>
       </div>
       <div class="d-flex justfify-content-center">
-        <a class="navbar-brand outfit-semibold brandname-nav-margin" href="index.html">outncenter</a>
+        <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style" href="index.html">outncenter</a>
       </div>
       <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
@@ -48,26 +48,23 @@
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
         aria-labelledby="offcanvasScrollNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h5>
+          <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
           <button type="button" class="btn-close close-button" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
             <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-            <li class="nav-item"><a class="nav-link" href="getrailed.html">getrailed</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
                 corporate
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="corporate.html">Action</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="corporate.html">Something else here</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Content</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Management</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Production</a></li>
+                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
               </ul>
             </li>
           </ul>
@@ -78,11 +75,11 @@
   <!--end down-scrollnavbar-->
 
   <!-- Carousel and its navigation-->
-  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-    <nav class="navbar" id="transNavbar">
+  <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
+    <nav class="navbar bg-black" style="padding-left: 7%; padding-right: 7%;">
       <div class="container-fluid">
         <div class="justify-content-start">
-          <button class="icon-style">
+          <button class="icon-style icon-white">
             <a href="profile.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -92,7 +89,7 @@
               </svg>
             </a>
           </button>
-          <button class="icon-style">
+          <button class="icon-style icon-white">
             <a href="favourites.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
                 viewBox="0 0 16 16">
@@ -103,16 +100,16 @@
           </button>
         </div>
         <div class="d-flex justfify-content-center">
-          <a class="navbar-brand outfit-semibold brandname-nav-margin" href="index.html">outncenter</a>
+          <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style icon-white" href="index.html">outncenter</a>
         </div>
         <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
           aria-labelledby="offcanvasScrollNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h5>
+            <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
           </div>
           <div class="offcanvas-body">
@@ -126,12 +123,10 @@
                   corporate
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="corporate.html">Action</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Another action</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="corporate.html">Something else here</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Content</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Management</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Production</a></li>
+                  <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
                 </ul>
               </li>
             </ul>
@@ -139,65 +134,89 @@
         </div>
       </div>
     </nav>
-
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2">
-      </button>
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./images/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/teal_carousel.png" class="d-block w-100" alt="teal advertisement">
-      </div>
-      <div class="carousel-item">
-        <img src="./images/orange_carousel.png" class="d-block w-100" alt="orange advertisement">
-      </div>
-    </div>
-  </div>
 <!--end of navigations-->
 
 <!--main for your content and text starts here-->
   <main>
-    <!--container for about-->
     <div class="container">
       <div class="row">
-        <div class="col-12">
-          <h2>favourites</h2>
-          <p>you haven't given your heart away, yet</p>
-          </p>
-        </div>
-      </div>
-    <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
-      <div class="row">
-        <div class="col-12">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
-        </div>
+        <h2>my faves</h2>
       </div>
     </div>
+    <br>
+    <br>
+    <div class="container">
+      <div class="row gy-4 gx-4"> <!-- spacing between rows and columns -->
+        <!-- Card 1 -->
+        <div class="col-12 col-md-6 col-xl-4">
+          <div class="card h-100">
+            <img src="./images/theatre_shows/theatre-show-eclipse-hearts.png" class="card-img-top" alt="eclipse-hearts-photo">
+            <div class="card-body d-flex flex-column justify-content-between">
+              <div>
+                <h4 class="card-title">Eclipse Hearts</h4>
+                <p>3 Apr - 3 May 2025</p>
+                <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho inspired retelling. </p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+              </div>
+              <div class="d-flex justify-content-end">
+                <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                    <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
     <!--end container for about-->
   </main>
   <!--main for your content stops here-->
 
   <!--footer navigation starts here-->
-  <footer>
+  <footer class="bg-blue text-white py-4">
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h5>outncenter</h5>
+        <div class="row">
+            <!-- Brand Logo & Name -->
+            <div class="col-md-4 text-center text-md-start">
+                <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+                <h5 class="mt-2">outncenter</h5>
+            </div>
+
+            <!-- Contact Information -->
+            <div class="col-md-4 text-center footer2">
+                <h5>Contact</h5>
+                <p><a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
+                <p>Phone: +31 6 20 87 45 1</p>
+                <p>Address: 12 Grote Markt, Breda</p>
+            </div>
+
+            <!-- Explore (Navigation Links) -->
+            <div class="col-md-4 text-center text-md-end">
+                <h5>Explore</h5>
+                <ul class="list-unstyled footer2">
+                    <li><a href="index.html" style="text-decoration: none;  color: white;">Home Page</a></li>
+                    <li><a href="about.html" style="text-decoration: none;  color: white;">About</a></li>
+                    <li><a href="blog.html" style="text-decoration: none;  color: white;">Blog</a></li>
+                    <li><a href="profile.html" style="text-decoration: none;  color: white;">Profile</a></li>
+					<li><a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-3">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="large-logo justify-content-start">
+		<div class="text-center mt-3">
+            <a href="https://www.tiktok.com/@outncenter._?_t=ZN-8vDfVe41V8o&_r=1" target="_blank" class="text-white me-3">
+                <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
+            </a>
+            <a href="https://www.instagram.com/outncenter._?igsh=bTAydDhpemxuNXJs" target="_blank" class="text-white">
+                <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
+            </a>
         </div>
-      </div>
+        <hr class="my-3 border-light">
+        <p class="text-center footer2 mb-0">© 2025 outncenter. All Rights Reserved.</p>
     </div>
-  </footer>
+	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+</footer>
   <!--footer ends here-->
 
   <!--your script starts here-->
