--- a/profile.html
+++ b/profile.html
@@ -139,7 +139,7 @@
 <!--main for your content and text starts here-->
   <main>
     <!--container for about-->
-    <div class="container" style="margin-top: 5%;">
+    <div class="container d-flex justify-content-center" style="margin-top: 5%;">
     <div class="profile-container">
         <h4 class="text-center" style="font-size: 20px;">Create Your Profile</h4>
         <form action="profile.html" method="POST">
