--- a/blog.html
+++ b/blog.html
@@ -137,7 +137,7 @@
 
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/blog4.jpg" class="d-block w-100" alt="play photo">
+        <img src="images/blog-page-images/theater_play_actress.jpg" class="d-block w-100" alt="play photo">
       </div>
     </div>
   </div>
@@ -167,33 +167,33 @@
 		
 		<div class="row">
 			<div class="col-12 col-md-6 col-xl-4">
-			 	<img src="images/blog3.jpg" class="img-fluid" alt="template">
+			 	<img src="images/blog-page-images/two_men.jpg" class="img-fluid" alt="template">
 				<h1 class= "blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h1>
 				<p class= "date">29.04.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog2.jpg" class="img-fluid" alt="template">
+				<img src="images/blog-page-images/man_in_makeup.jpg" class="img-fluid" alt="template">
 				<h1 class= "blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h1>
 				<p class= "date">23.04.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog7.jpg" class="img-fluid" alt="template">
+				<img src="images/blog-page-images/theater_indoor.jpg" class="img-fluid" alt="template">
 				<h1 class= "blogtitle">The Smartest Ways to Score Theater Tickets</h1>
 				<p class= "date">14.04.2025</p>
 			</div>
 	
 			<div class="col-12 col-md-6 col-xl-4">
-			 	<img src="images/blog1.jpg" class="img-fluid" alt="template">
+			 	<img src="images/blog-page-images/costume_group.jpg" class="img-fluid" alt="template">
 				<h1 class= "blogtitle" >From the Fringe to Broadway: How LGBTQ+ Stories Shape the Stage</h1>
 				<p class= "date">02.04.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog5.jpg" class="img-fluid" alt="template">
+				<img src="images/blog-page-images/dark_theater.jpg" class="img-fluid" alt="template">
 				<h1 class= "blogtitle">Breaking Barriers: LGBTQ+ Playwrights Changing the Theater Scene</h1>
 				<p class= "date">25.03.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/blog6.jpg" class="img-fluid" alt="template">
+				<img src="images/blog-page-images/rainbow_flag.jpg" class="img-fluid" alt="template">
 				<h1 class= "blogtitle">The Evolution of LGBTQ+ Representation in Theater</h1>
 				<p class= "date">13.03.2025</p>
 			</div>
